--- a/src/button/style/index.scss
+++ b/src/button/style/index.scss
@@ -1,5 +1,3 @@
-@import '../../style/var';
-
 :host {
   display: inline-block;
   box-sizing: border-box;
@@ -8,7 +6,7 @@
   overflow: hidden;
   font-weight: 700;
   font-size: 0.875rem;
-  font-family: $font-family;
+  font-family: '72', '72full', arial, helvetica, sans-serif;
   line-height: normal;
   white-space: nowrap;
   text-overflow: ellipsis;
