feat: introduce new component: Checkbox, Label

--- a/src/button/style/index.scss
+++ b/src/button/style/index.scss
@@ -76,19 +76,16 @@
   border-color: #4db1ff;
 }
 
-:host([focused]:not(:active)) .stylospectrum-button:after {
-  content: '';
+:host([focused]:not(:active)) .stylospectrum-button::after {
   position: absolute;
+  inset: 0.0625rem;
   box-sizing: border-box;
-  left: 0.0625rem;
-  top: 0.0625rem;
-  right: 0.0625rem;
-  bottom: 0.0625rem;
   border: 0.125rem solid #9ad3ff;
   border-radius: 0.375rem;
+  content: '';
 }
 
-:host([type='Primary'][focused]) .stylospectrum-button:after {
+:host([type='Primary'][focused]) .stylospectrum-button::after {
   border-color: #000;
 }
 
