feat: introduce new component: Form

--- a/src/input/style/index.scss
+++ b/src/input/style/index.scss
@@ -150,6 +150,7 @@
       position: absolute;
       top: 100%;
       left: 0;
+      z-index: 1000;
       display: flex;
       gap: 0.375rem;
       align-items: center;
