--- a/src/input/style/index.scss
+++ b/src/input/style/index.scss
@@ -109,7 +109,7 @@
     outline: none;
   }
 
-  &-clear-icon {
+  &-icon {
     padding: 0;
     color: inherit;
 
@@ -128,6 +128,17 @@
       outline: none;
       cursor: pointer;
       border-inline-start: none;
+
+      &:hover {
+        background-color: #1d232a;
+        box-shadow: inset 0 0 0 0.0625rem rgba(77, 177, 255, 0.3);
+      }
+
+      &:active {
+        color: #4db1ff;
+        background-color: #213131;
+        box-shadow: inset 0 0 0 0.0625rem rgba(77, 177, 255, 0.3);
+      }
     }
   }
 
