--- a/src/popover/style/index.scss
+++ b/src/popover/style/index.scss
@@ -85,5 +85,31 @@
     box-sizing: border-box;
     overflow: auto;
     color: #eaecee;
+
+    &::-webkit-scrollbar:horizontal {
+      height: 0.75rem;
+    }
+
+    &::-webkit-scrollbar:vertical {
+      width: 0.75rem;
+    }
+
+    &::-webkit-scrollbar {
+      background-color: #1d232a;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: #647891;
+      border: 0.125rem solid #1d232a;
+      border-radius: 0.75rem;
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+      background-color: #8697ac;
+    }
+
+    &::-webkit-scrollbar-corner {
+      background-color: #1d232a;
+    }
   }
 }
