--- a/src/button/style/index.scss
+++ b/src/button/style/index.scss
@@ -46,13 +46,13 @@
   border: 0.0625rem solid #3a4a5a;
 }
 
-:host([type='Secondary']:not([disabled]):hover) {
+:host([type='Secondary']:not([disabled]):not([disable-internal-focus]):hover) {
   color: #4db1ff;
   background-color: #222b35;
   border-color: #3a4a5a;
 }
 
-:host([type='Secondary']:not([disabled]):active) {
+:host([type='Secondary']:not([disabled]):not([disable-internal-focus]):active) {
   color: #4db1ff;
   background-color: #213131;
   border-color: #4db1ff;
@@ -76,6 +76,7 @@
   border-color: #4db1ff;
 }
 
+:host([disable-internal-focus]) .stylospectrum-button::after,
 :host([focused]:not(:active)) .stylospectrum-button::after {
   position: absolute;
   inset: 0.0625rem;
