--- a/src/textarea/style/index.scss
+++ b/src/textarea/style/index.scss
@@ -1,14 +1,15 @@
 :host {
   display: inline-block;
   box-sizing: border-box;
-  width: 13.125rem;
-  min-width: calc(2rem + 1 * 2rem);
-  height: 1.625rem;
+  width: 100%;
+  min-width: 6rem;
+  min-height: 1.625rem;
   margin: 0.1875rem 0;
   color: #fff;
   font-size: 0.875rem;
   font-family: '72override', '72', '72full', Arial, Helvetica, sans-serif;
   font-style: normal;
+  line-height: 1.5;
   text-align: start;
   background: 0 100% / 100% 0.0625rem no-repeat
     linear-gradient(0deg, #a9b4be, #a9b4be) border-box;
@@ -27,7 +28,7 @@
   pointer-events: none;
 }
 
-:host([focused]) .stylospectrum-input-wrapper::after {
+:host([focused]) .stylospectrum-textarea-wrapper::after {
   position: absolute;
   inset: 0;
   z-index: 2;
@@ -49,7 +50,7 @@
   background-color: #1d232a;
   border-color: #4db1ff;
 
-  .stylospectrum-input-wrapper::after {
+  .stylospectrum-textarea-wrapper::after {
     border-color: #4db1ff;
   }
 }
@@ -71,17 +72,25 @@
   background-color: #1d232a;
   border-color: #fa6161;
 
-  .stylospectrum-input-wrapper::after {
+  .stylospectrum-textarea-wrapper::after {
     border-color: #fa6161;
   }
 }
 
-.stylospectrum-input {
+:host([growing]) .stylospectrum-textarea {
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  height: 100%;
+}
+
+.stylospectrum-textarea {
   flex: 1 1 0%;
   box-sizing: border-box;
   width: 100%;
-  min-width: 2rem;
-  padding: 0 0.5rem;
+  min-height: 2.9375rem;
+  padding: 0.1875rem 0.5rem 0.125rem;
   color: inherit;
   font-size: inherit;
   font-family: inherit;
@@ -95,6 +104,33 @@
   border: none;
   outline: none;
   appearance: none;
+  resize: none;
+
+  &::-webkit-scrollbar:horizontal {
+    height: 0.75rem;
+  }
+
+  &::-webkit-scrollbar:vertical {
+    width: 0.75rem;
+  }
+
+  &::-webkit-scrollbar {
+    background-color: #1d232a;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #647891;
+    border: 0.125rem solid #1d232a;
+    border-radius: 0.75rem;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #8697ac;
+  }
+
+  &::-webkit-scrollbar-corner {
+    background-color: #1d232a;
+  }
 
   &::-webkit-placeholder {
     color: #8396a8;
@@ -108,44 +144,12 @@
     flex-direction: row;
     justify-content: flex-end;
     box-sizing: border-box;
-    height: 100%;
+    min-height: 2.9375rem;
+    padding: 0.0625rem;
     color: inherit;
     background: transparent;
     border-radius: 0.25rem;
     outline: none;
-  }
-
-  &-icon {
-    padding: 0;
-    color: inherit;
-
-    &-wrapper {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-sizing: border-box;
-      width: 2rem;
-      min-width: 2rem;
-      height: calc(100% - 1px);
-      min-height: 1rem;
-      padding: 0;
-      color: #eaecee;
-      border-radius: 0.25rem;
-      outline: none;
-      cursor: pointer;
-      border-inline-start: none;
-
-      &:hover {
-        background-color: #1d232a;
-        box-shadow: inset 0 0 0 0.0625rem rgba(77, 177, 255, 0.3);
-      }
-
-      &:active {
-        color: #4db1ff;
-        background-color: #213131;
-        box-shadow: inset 0 0 0 0.0625rem rgba(77, 177, 255, 0.3);
-      }
-    }
   }
 
   &-value-state-message {
@@ -180,5 +184,19 @@
         0 2px 8px 0 rgba(0, 0, 0, 0.6),
         0 0 0 1px rgba(255, 255, 255, 0.35);
     }
+  }
+
+  &-mirror {
+    box-sizing: border-box;
+    width: 100%;
+    min-height: 2.9375rem;
+    max-height: 94vh;
+    padding-top: 0.1875rem;
+    padding-bottom: 0.125rem;
+    font-size: 0.875rem;
+    font-family: '72override', '72', '72full', Arial, Helvetica, sans-serif;
+    line-height: 1.5;
+    word-break: break-all;
+    visibility: hidden;
   }
 }
