--- a/src/textarea/style/index.scss
+++ b/src/textarea/style/index.scss
@@ -144,6 +144,7 @@
     flex-direction: row;
     justify-content: flex-end;
     box-sizing: border-box;
+    height: 100%;
     min-height: 2.9375rem;
     padding: 0.0625rem;
     color: inherit;
