--- a/src/popover/style/index.scss
+++ b/src/popover/style/index.scss
@@ -2,6 +2,26 @@
   font-family: '72override', '72', '72full', Arial, Helvetica, sans-serif;
 }
 
+:host([placement='Bottom']) .stylospectrum-popover-arrow {
+  top: -0.5rem;
+  left: calc(50% - 0.5625rem);
+  height: 0.5625rem;
+
+  &::after {
+    margin: 0.1875rem 0 0 0.1875rem;
+  }
+}
+
+:host([placement='Left']) .stylospectrum-popover-arrow {
+  top: calc(50% - 0.5625rem);
+  right: -0.5625rem;
+  width: 0.5625rem;
+
+  &::after {
+    margin: 0.1875rem 0 0 -0.375rem;
+  }
+}
+
 .stylospectrum-popover {
   display: flex;
   flex-direction: column;
@@ -31,11 +51,8 @@
 
   &-arrow {
     position: absolute;
-    top: -0.5rem;
-    left: calc(50% - 0.5625rem);
     display: block;
     width: 1rem;
-    height: 0.5625rem;
     overflow: hidden;
     pointer-events: none;
 
@@ -43,7 +60,6 @@
       display: block;
       width: 0.7rem;
       height: 0.7rem;
-      margin: 0.1875rem 0 0 0.1875rem;
       background-color: #1d232a;
       box-shadow:
         0 0 0 0.0625rem hsla(0deg, 0%, 100%, 0.35),
