--- a/src/textarea/style/index.scss
+++ b/src/textarea/style/index.scss
@@ -30,10 +30,10 @@
 
 :host([focused]) .stylospectrum-textarea-wrapper::after {
   position: absolute;
-  inset: 0;
+  inset: var(--stylospectrum-textarea-inset, 0);
   z-index: 2;
   border: 0.125rem solid transparent;
-  border-radius: 0.25rem;
+  border-radius: var(--stylospectrum-textarea-border-radius, 0.25rem);
   content: '';
   pointer-events: none;
 }
