--- a/src/textarea/style/index.scss
+++ b/src/textarea/style/index.scss
@@ -132,7 +132,7 @@
     background-color: #1d232a;
   }
 
-  &::-webkit-placeholder {
+  &::placeholder {
     color: #8396a8;
     font-weight: normal;
     font-style: italic;
