--- a/src/dialog/style/index.scss
+++ b/src/dialog/style/index.scss
@@ -55,15 +55,34 @@
     &-text {
       display: inline-block;
       max-width: 100%;
-      min-height: 2.5rem;
-      max-height: 2.5rem;
       margin: 0;
       overflow: hidden;
       color: inherit;
       font-size: inherit;
-      line-height: 2.5rem;
       white-space: nowrap;
       text-overflow: ellipsis;
+
+      &-wrapper {
+        display: flex;
+        align-items: center;
+        max-width: 100%;
+        min-height: 2.5rem;
+        max-height: 2.5rem;
+        line-height: 2.5rem;
+      }
+    }
+
+    &-icon {
+      display: flex;
+      align-items: center;
+      box-sizing: border-box;
+      height: 2.25rem;
+      padding: 0.3125rem 0.5rem;
+      color: #a9b4be;
+      font-size: 1rem;
+      background: rgba(0, 0, 0, 0);
+      border: 1px solid rgba(0, 0, 0, 0);
+      border-radius: 0.5rem;
     }
   }
 
