--- a/src/progress-indicator/style/index.scss
+++ b/src/progress-indicator/style/index.scss
@@ -1,72 +1,72 @@
 :host {
   display: inline-block;
-  min-width: 4rem;
-  width: 100%;
-  height: unset;
-  overflow: hidden;
   box-sizing: border-box;
-  padding: 1.25rem 0 0.75rem 0;
+  width: 100%;
+  min-width: 4rem;
+  height: unset;
+  padding: 1.25rem 0 0.75rem;
+  overflow: hidden;
   padding-inline-end: 1.25rem;
 }
 
 .stylospectrum-progress-indicator {
+  position: relative;
   display: flex;
   align-items: center;
-  background: #2e3b48;
-  border-radius: 0.25rem;
-  overflow: visible;
-  min-height: var(--_ui5-v1-21-2_progress_indicator_root_min_height);
-  height: 0.375rem;
+  box-sizing: border-box;
   width: 100%;
+  height: 0.375rem;
+  min-height: var(--_ui5-v1-21-2_progress_indicator_root_min_height);
+  overflow: visible;
   font-size: 0.875rem;
   font-family: '72override', '72', '72full', Arial, Helvetica, sans-serif;
-  position: relative;
-  box-sizing: border-box;
+  background: #2e3b48;
+  border-radius: 0.25rem;
 
   &-bar {
-    background: #a9b4be;
-    justify-content: flex-end;
-    height: 0.625rem;
+    z-index: 1;
     display: flex;
-    align-items: center;
     flex-direction: row;
-    color: #eaecee;
-    transition-property: width;
-    transition-timing-function: linear;
+    align-items: center;
+    justify-content: flex-end;
     box-sizing: border-box;
+    height: 0.625rem;
+    color: #eaecee;
+    background: #a9b4be;
     border: none;
     border-radius: 0.5rem 0 0 0.5rem;
-    z-index: 1;
+    transition-timing-function: linear;
+    transition-property: width;
   }
 
   &-remaining-bar {
-    justify-content: flex-start;
-    width: 100%;
-    height: 100%;
+    position: absolute;
     display: flex;
-    align-items: center;
+    flex-basis: 0;
     flex-direction: row;
     flex-grow: 1;
-    flex-basis: 0px;
+    align-items: center;
+    justify-content: flex-start;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    overflow: visible;
+    color: #fff;
     border: none;
-    border-inline-start: none;
     border-radius: var(
       --_ui5-v1-21-2_progress_indicator_remaining_bar_border_radius
     );
-    box-sizing: border-box;
-    color: #fff;
-    overflow: visible;
-    position: absolute;
+    border-inline-start: none;
 
     &::after,
     &::before {
-      content: '';
+      position: absolute;
+      display: block;
       width: 0.25rem;
       height: 0.25rem;
-      position: absolute;
-      border-radius: 50%;
-      display: block;
       background: #a9b4be;
+      border-radius: 50%;
+      content: '';
     }
 
     &::before {
@@ -79,13 +79,13 @@
   }
 
   &-value {
-    margin: 0 0 0.1875rem 0;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 100%;
     position: absolute;
     top: -1.3125rem;
+    max-width: 100%;
+    margin: 0 0 0.1875rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     inset-inline-start: 0;
   }
 
