--- a/src/busy-indicator/style/index.scss
+++ b/src/busy-indicator/style/index.scss
@@ -1,17 +1,47 @@
-.stylospectrum-busy-indicator {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 3em;
-  max-width: 15rem;
-  padding: 1rem 2rem;
-  background-color: #1d232a;
-  border-radius: 0.75rem;
-  box-shadow:
-    0 0 0 0.0625rem rgba(255, 255, 255, 0.35),
-    0 0.625rem 1.875rem 0 rgba(0, 0, 0, 0.6);
-  transform: translate(-50%, -50%);
+:host {
+  display: inline-block;
+}
 
+:host(:not([global])) {
+  width: 3rem;
+  max-width: 15rem;
+
+  .stylospectrum-busy-indicator {
+    display: inline-flex;
+  }
+}
+
+:host([size='Medium']) .stylospectrum-busy-indicator > div {
+  width: 1rem;
+  height: 1rem;
+  animation: BusyAnimationStandard 1.8s infinite ease-in-out;
+
+  &::before {
+    animation: BusyAnimationStandardBackground 1.8s infinite ease-in-out;
+    animation-duration: 0ms;
+  }
+
+  &::after {
+    animation: BusyAnimationStandardShadow 1.8s infinite ease-in-out;
+  }
+}
+
+:host([size='Small']) .stylospectrum-busy-indicator > div {
+  width: 0.5rem;
+  height: 0.5rem;
+  animation: BusyAnimationSmall 1.6s infinite ease-in-out;
+
+  &::before {
+    animation: BusyAnimationSmallBackground 1.6s infinite ease-in-out;
+    animation-duration: 0ms;
+  }
+
+  &::after {
+    animation: BusyAnimationSmallShadow 1.6s infinite ease-in-out;
+  }
+}
+
+.stylospectrum-busy-indicator {
   &-wrap {
     position: fixed;
     inset: 0;
@@ -23,16 +53,28 @@
     cursor: wait;
   }
 
+  &-wrap & {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding: 1rem 2rem;
+    background-color: #1d232a;
+    border-radius: 0.75rem;
+    box-shadow:
+      0 0 0 0.0625rem rgba(255, 255, 255, 0.35),
+      0 0.625rem 1.875rem 0 rgba(0, 0, 0, 0.6);
+    transform: translate(-50%, -50%);
+    width: 3rem;
+    max-width: 15rem;
+  }
+
   div {
     position: relative;
     display: block;
     float: left;
-    width: 1em;
-    height: 1em;
     margin: 0;
     text-indent: 1px;
     border-radius: 100%;
-    animation: BusyAnimation 1.8s infinite ease-in-out;
 
     &::before,
     &::after {
@@ -49,26 +91,23 @@
 
     &::before {
       background: #4db1ff;
-      animation: BusyAnimationBackground 1.8s infinite ease-in-out;
-      animation-duration: 0ms;
     }
 
     &::after {
       box-shadow: inset 0 0 0 0 #4db1ff;
-      animation: BusyAnimationShadow 1.8s infinite ease-in-out;
     }
 
     &:nth-child(1) {
-      animation-delay: -0.32s;
+      animation-delay: -0.32s !important;
     }
 
     &v:nth-child(2) {
-      animation-delay: -0.16s;
+      animation-delay: -0.16s !important;
     }
   }
 }
 
-@keyframes BusyAnimation {
+@keyframes BusyAnimationStandard {
   0%,
   80%,
   100% {
@@ -80,7 +119,7 @@
   }
 }
 
-@keyframes BusyAnimationBackground {
+@keyframes BusyAnimationStandardBackground {
   0%,
   80%,
   100% {
@@ -92,7 +131,7 @@
   }
 }
 
-@keyframes BusyAnimationShadow {
+@keyframes BusyAnimationStandardShadow {
   0%,
   80%,
   100% {
@@ -100,6 +139,39 @@
   }
 
   40% {
+    opacity: 1;
+  }
+}
+
+@keyframes BusyAnimationSmall {
+  0%,
+  100% {
+    transform: scale(0.2);
+  }
+
+  50% {
+    transform: scale(1);
+  }
+}
+
+@keyframes BusyAnimationSmallBackground {
+  0%,
+  100% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0.1;
+  }
+}
+
+@keyframes BusyAnimationSmallShadow {
+  0%,
+  100% {
+    opacity: 0;
+  }
+
+  50% {
     opacity: 1;
   }
 }
