--- a/src/dialog/style/index.scss
+++ b/src/dialog/style/index.scss
@@ -1,20 +1,3 @@
-:host {
-  position: fixed;
-  z-index: 1250;
-  display: none;
-  flex-direction: column;
-  box-sizing: border-box;
-  min-width: 20rem;
-  max-width: 90%;
-  min-height: 6rem;
-  max-height: 94%;
-  background: #1d232a;
-  border-radius: 0.75rem;
-  box-shadow:
-    0 0 0 0.0625rem rgba(255, 255, 255, 0.35),
-    0 1.25rem 5rem 0 rgba(0, 0, 0, 0.6);
-}
-
 .stylospectrum-dialog {
   display: flex;
   flex-direction: column;
@@ -25,6 +8,23 @@
   background: inherit;
   border-radius: inherit;
   outline: none;
+
+  &-wrap {
+    position: fixed;
+    z-index: 1250;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    min-width: 20rem;
+    max-width: 90%;
+    min-height: 6rem;
+    max-height: 94%;
+    background: #1d232a;
+    border-radius: 0.75rem;
+    box-shadow:
+      0 0 0 0.0625rem rgba(255, 255, 255, 0.35),
+      0 1.25rem 5rem 0 rgba(0, 0, 0, 0.6);
+  }
 
   &-header {
     position: relative;
@@ -109,6 +109,17 @@
     &-space {
       flex: 1;
     }
+  }
+
+  &-block-layer {
+    position: fixed;
+    z-index: 1200;
+    display: inline-block;
+    background-color: #000;
+    outline: none;
+    opacity: 0.6;
+    pointer-events: all;
+    inset: -500px;
   }
 }
 
